<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_black">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdv_food_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_food_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_description_food_item"
            tools:src="@drawable/food1" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_title_food_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/cdv_food_item"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_food_item" />

    <TextView
        android:id="@+id/txt_description_food_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cdv_food_item"
        app:layout_constraintTop_toBottomOf="@id/txt_title_food_item"
        tools:text="@string/description_food_item" />

    <TextView
        android:id="@+id/txt_price_food_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/cdv_food_item"
        app:layout_constraintTop_toBottomOf="@id/txt_description_food_item"
        tools:text="@string/price_food_item" />

    <Button
        android:id="@+id/btn_food_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/button_food_item"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_price_food_item"
        app:layout_constraintTop_toBottomOf="@id/txt_description_food_item" />

    <View
        android:id="@+id/view_line_food_item"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_food_item" />

</androidx.constraintlayout.widget.ConstraintLayout>